<resources>
    <string name="app_name">BingeEatingProject</string>
    <string name="loginButton">Login</string>
    <string name="dailyActivity">Daily Activity</string>
    <string name="weeklyActivity">Weekly Activity</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="appointment">Appointment</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="paName">Physical Activity Name</string>
    <string name="noOfMinutes">Minutes Performed</string>
    <string name="proceed">Proceed</string>
    <string name="place">Place</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="quantity">Quantity</string>
    <string name="binge">Binge ?</string>
    <string name="vomiting">Vomiting ?</string>
    <string name="lexative">Used Lexative ?</string>
    <string name="dieurictic">Dieurictic ?</string>
    <string name="savelog">Save Quick Log</string>
    <string name="addPicture">Add Image</string>
    <string name="notes">Notes</string>
    <string name="title">Self Monitoring</string>
    <string name="weekno">Week No</string>
    <string name="totalBinges">Total binges in the Week</string>
    <string name="totalCount">Total Count of V/L/O</string>
    <string name="weight">Weight</string>
    <string name="gdays">Good Days</string>
    <string name="days">days</string>
    <string name="goal">F/V goal reached for ?</string>
    <string name="gPhysical">good Physical activity for ?</string>
    <string name="wevents">Events</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
