<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="homework.com.bingeeatingproject.FoodActivity">
    <LinearLayout android:id="@+id/fdateTimeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editText_fdate"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/date" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_ftime"
        android:layout_alignEnd="@+id/editText_fdate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/time" />
</LinearLayout>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_fplace"
        android:layout_below="@+id/fdateTimeLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:hint="@string/place" />
    <LinearLayout android:id="@+id/foodLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_fplace"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_food"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:hint="@string/food" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_drink"
        android:layout_alignEnd="@+id/editText_food"
        android:layout_marginTop="20dp"
        android:hint="@string/drink" />


    </LinearLayout>




        <TextView
            android:text="@string/binge"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foodLayout"
            android:layout_marginTop="22dp"
            android:id="@+id/textView_binge"
            android:layout_marginLeft="25dp" />

        <Switch
        android:layout_width="120dp"
        android:layout_height="wrap_content"
            android:layout_below="@+id/foodLayout"
        android:layout_toEndOf="@+id/textView_binge"
            android:id="@+id/switch_binge"
            android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/vomiting"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_binge"
        android:layout_marginTop="22dp"
        android:id="@+id/textView_vomiting"
        android:layout_marginLeft="25dp" />

    <Switch
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_binge"
        android:layout_toEndOf="@+id/textView_vomiting"
        android:id="@+id/switch_vomiting"
        android:layout_marginTop="15dp" />
    <TextView
        android:text="@string/lexative"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_vomiting"
        android:layout_marginTop="22dp"
        android:id="@+id/textView_lexative"
        android:layout_marginLeft="25dp" />

    <Switch
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_vomiting"
        android:layout_toEndOf="@+id/textView_lexative"
        android:id="@+id/switch_lexative"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="23dp"
        android:id="@+id/textView_ferror"
        android:layout_below="@+id/editText_fNotes"
         />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:id="@+id/button_fproceed"
        android:background="#a0bcc5"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginBottom="51dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView_ferror" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_fNotes"
        android:hint="@string/notes"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/switch_lexative"
        android:layout_alignStart="@+id/foodLayout" />

</RelativeLayout>
