<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_physical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="homework.com.bingeeatingproject.PhysicalActivity">
    <LinearLayout android:id="@+id/pdateTimeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_pdate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="152dp"
        android:hint="@string/date" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_ptime"
        android:layout_alignEnd="@+id/editText_pdate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="152dp"
        android:hint="@string/time" />
</LinearLayout>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_paName"
        android:layout_below="@+id/pdateTimeLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/paName" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_noOfMinutes"
        android:layout_below="@+id/editText_paName"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:hint="@string/noOfMinutes" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:id="@+id/button_proceedp"
        android:background="#a0bcc5"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_pe"
        android:layout_marginStart="50dp"
        android:layout_above="@+id/button_proceedp"
        android:layout_alignStart="@+id/button_proceedp"
        android:layout_marginBottom="18dp" />
</RelativeLayout>
