<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details_weekly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="homework.com.bingeeatingproject.DetailsWeeklyActivity">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:id="@+id/textView_wdweekno"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/totalBinges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_wdweekno"
        android:layout_marginTop="20dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginStart="81dp"
        android:id="@+id/textView_wdtbinges" />

    <TextView
        android:text="@string/totalCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView8" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/textView_wdtbinges"
        android:id="@+id/textView_wdtotalCount" />

    <TextView
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView13" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignEnd="@+id/textView_wdtotalCount"
        android:id="@+id/textView_wdweight" />

    <TextView
        android:text="@string/gdays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/textView15" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignStart="@+id/textView_wdweight"
        android:id="@+id/textView_wdgooddays" />

    <TextView
        android:text="@string/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView17" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignEnd="@+id/textView_wdgooddays"
        android:id="@+id/textView_wdgoals" />

    <TextView
        android:text="@string/gPhysical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textView19" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignStart="@+id/textView_wdgoals"
        android:id="@+id/textView_wdgphysical" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_wdevents" />

</RelativeLayout>
